--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/julien-S-AFEC/mediFlow#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
