--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "dropzone": "^6.0.0-beta.2",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "react-simple-wysiwyg": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
