--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "dropzone": "^6.0.0-beta.2",
+    "emoji-picker-react": "^4.13.1",
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
