--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "react-simple-wysiwyg": "^3.4.0"
+    "react-simple-wysiwyg": "^3.4.0",
+    "react-to-print": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
