--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-simple-wysiwyg": "^3.4.0",
-    "react-to-print": "^3.1.1"
+    "react-to-print": "^3.1.1",
+    "react-tooltip": "^5.29.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
