--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "multer": "^2.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
+    "node-mailer": "^0.1.1",
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0"
   }
