--- a/server/package.json
+++ b/server/package.json
@@ -29,12 +29,14 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.1",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "node-mailer": "^0.1.1",
     "nodemon": "^3.1.10",
+    "sanitize-html": "^2.17.0",
     "uuid": "^11.1.0"
   }
 }
