--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:18
+FROM node:20-alpine
 
-WORKDIR /app/mediFlow
+WORKDIR /app
 
-COPY package.json .
-
+COPY package*.json ./
 RUN npm install
 
 COPY . .
 
-CMD ["npm", "start"]
-
 EXPOSE 3000
+
+CMD ["npm", "start"]
