--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "dotenv": "^17.2.2",
     "dropzone": "^6.0.0-beta.2",
     "emoji-picker-react": "^4.13.1",
     "he": "^1.2.0",
