--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,8 @@ version: "3.8"
 
 services:
   mediFlow-db:
-    image: mysql:8
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: medi_flow
@@ -13,13 +14,21 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
       - ./initdb:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-prootpassword"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+      start_period: 30s
 
   mediflow-server:
     build:
       context: ./server
       dockerfile: Dockerfile
     depends_on:
-      - mediFlow-db
+      mediFlow-db:
+        condition: service_healthy
+    restart: on-failure
     env_file:
       - .env
     environment:
@@ -31,7 +40,7 @@ services:
       DB_NAME: medi_flow
       DB_PASSWORD: medi_flow123
     ports:
-      - "3008:3000"
+      - "3000:3000"
     volumes:
       - ./server:/app
 
