--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "node-mailer": "^0.1.1",
     "nodemon": "^3.1.10",
     "sanitize-html": "^2.17.0",
+    "tesseract.js": "^6.0.1",
     "uuid": "^11.1.0"
   }
 }
