--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
-# Diagnostic reports (https://nodejs.orghttps://mediflow.soutadejulien.com/api/report.html)
+# Diagnostic reports (https://nodejs.orghttps://mediflow.soutadejulien.comhttp://localhost:3000/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Runtime data
@@ -35,7 +35,7 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.orghttps://mediflow.soutadejulien.com/api/addons.html)
+# Compiled binary addons (https://nodejs.orghttps://mediflow.soutadejulien.comhttp://localhost:3000/api/addons.html)
 build/Release
 
 # Dependency directories
